--- a/style.css
+++ b/style.css
@@ -126,6 +126,12 @@ li {
     border: 1px solid;
     padding: 5px 15px;
     border-radius: 20px;
+    &:hover{
+        transition: all 0.2s ease;
+        box-shadow: 0px 1px 2px;
+        background-color: #C8DBD5;
+        transform: scale(.90);
+    }
 }
 
 h1{
